tests/sessions/python_exception.txtar
error: 

Traceback (most recent call last):
  File "runner/main.py", line 323, in on_event
    result = fn(event)
             ^^^^^^^^^
  File "main.py", line 4, in main
    raise X()
main.X

-- main.py:main --
class X(Exception): pass

def main(event):
    raise X()
